--- a/HTML/lists.html
+++ b/HTML/lists.html
@@ -3,9 +3,6 @@
         <title>lists</title>
     </head>
     <body>
-        <h1>Types of list</h1>
-        <p>Ordered list</p>
-        <p>Unordered list</p>
         <br>
         <h1>Ordered List</h1>
         <ol>
@@ -19,5 +16,14 @@
             <li>List 2</li>
             <li>List 3</li>
         </ul>
+        <h1>Dl</h1>
+        <dl>
+            <dt>List 1</dt>
+            <dd>Explaination of list 1</dd>
+            <dt>List 2</dt>
+            <dd>Explaination of list 2</dd>
+            <dt>List 3</dt>
+            <dd>Explaination of list 3</dd>
+        </dl>
     </body>
 </html>
