--- a/HTML/link.html
+++ b/HTML/link.html
@@ -5,5 +5,6 @@
     <body>
         <h1>link</h1>
         <a href="https://www.google.com/">Google</a>
+        <a href="./first.html">first file</a>
     </body>
 </html>
