--- a/HTML/sematic.html
+++ b/HTML/sematic.html
@@ -6,20 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sematic</h1>
-    <p>The army is a disciplined and dedicated force that safeguards the sovereignty, security, and integrity of a nation. It embodies courage, sacrifice, and an unwavering sense of duty. Soldiers work selflessly, often in harsh conditions, to protect citizens from external threats and maintain peace within the country. Beyond the battlefield, the army also plays a vital role in humanitarian aid, disaster relief, and nation-building activities. Their commitment, discipline, and resilience make the army not only a shield of defense but also a symbol of pride and unity for the people.</p>
-    <ul>
-        <li>header</li>
-        <li>main</li>
-        <li>footer</li>
-    </ul>
-    <ul>
-        <li>nav</li>
-        <li>section</li>
-        <li>article</li>
-        <li>aside</li>
-        <li>details</li>
-        <li>summary</li>
-    </ul>
+    <header>
+        <h1>Sematic</h1>
+    </header>
+    <main>
+        <p>The army is a disciplined and dedicated force that safeguards the sovereignty, security, and integrity of a nation. It embodies courage, sacrifice, and an unwavering sense of duty. Soldiers work selflessly, often in harsh conditions, to protect citizens from external threats and maintain peace within the country. Beyond the battlefield, the army also plays a vital role in humanitarian aid, disaster relief, and nation-building activities. Their commitment, discipline, and resilience make the army not only a shield of defense but also a symbol of pride and unity for the people.</p>
+        <ul>
+            <li>header</li>
+            <li>main</li>
+            <li>footer</li>
+        </ul>
+        <ul>
+            <li>nav</li>
+            <li>section</li>
+            <li>article</li>
+            <li>aside</li>
+            <li>details</li>
+            <li>summary</li>
+        </ul>
+    </main>
+    <footer>
+        <p>Completed</p>
+    </footer>
 </body>
 </html>
