--- a/HTML/form.html
+++ b/HTML/form.html
@@ -72,6 +72,31 @@
                     <label for="pizza">pizza</label>
                 </p>
             </fieldset>
+            <fieldset>
+                <legend>fruits</legend>
+                <p>
+                    <input type="checkbox" name="apple" id="apple">
+                    <label for="apple">apple</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="mango" id="mango">
+                    <label for="mango">mango</label>
+                </p>
+                <p>
+                    <input type="checkbox" name="papaya" id="papaya">
+                    <label for="papaya">papaya</label>
+                </p>
+            </fieldset>
+            <fieldset>
+                <legend>type</legend>
+                <label for="type">type here</label>
+                <textarea name="type" id="type" cols="30" rows="10" placeholder="type here"></textarea>
+            </fieldset>
+            <button type="submit">submit</button>
+            <button type="submit" formaction="https://httpbin.org/post" formmethod="post">post</button>
+            <button type="reset">reset</button>
+            <!-- <input type="submit" value="submit">
+            <input type="reset" value="reset"> -->
         </form>
     </article>
 </body>
