--- a/HTML/project.html
+++ b/HTML/project.html
@@ -14,7 +14,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="#hour">Visiting Hours</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <figure>
